tests/rosetta/out/Dart/calculating-the-value-of-e.dart
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:29:32Z
var epsilon = 1e-15;

double absf(double x) {
  if (x < 0) {
    return -x;
  }
  return x;
}

double pow10(int n) {
  double r = 1;
  var i = 0;
  while (i.toString().compareTo(n.toString()) < 0) {
    r = (r as num) * 10;
    i = (i as num) + 1;
  }
  return r;
}

String formatFloat(double f, int prec) {
  var scale = pow10(prec);
  var scaled = ((f * (scale as num)) as num) + 0.5;
  var n = (int.parse(scaled));
  var digits = n.toString();
  while (digits.length <= prec) {
    digits = '0' + digits;
  }
  var intPart = digits.toString().substring(0, digits.length - prec);
  var fracPart = digits.toString().substring(digits.length - prec, digits.length);
  return intPart + '.' + fracPart;
}

var factval = 1;

double e = 2;

var n = 2;

double term = 1;

void main() {
  while (true) {
    factval = (factval * n as int);
    n = (n + 1 as int);
    term = 1 / (double.parse(factval));
    e = e + term;
    if (absf(term) < epsilon) {
      break;
    }
  }
  print('e = ' + formatFloat(e, 15));
}

bool _equal(dynamic a, dynamic b) {
    if (a is List && b is List) {
        if (a.length != b.length) return false;
        for (var i = 0; i < a.length; i++) { if (!_equal(a[i], b[i])) return false; }
        return true;
    }
    if (a is Map && b is Map) {
        if (a.length != b.length) return false;
        for (var k in a.keys) { if (!b.containsKey(k) || !_equal(a[k], b[k])) return false; }
        return true;
    }
    return a == b;
}

String _formatDuration(Duration d) {
    if (d.inMicroseconds < 1000) return '${d.inMicroseconds}µs';
    if (d.inMilliseconds < 1000) return '${d.inMilliseconds}ms';
    return '${(d.inMilliseconds/1000).toStringAsFixed(2)}s';
}

void _json(dynamic v) {
    print(jsonEncode(v));
}


dynamic _min(dynamic v) {
    List<dynamic>? list;
    if (v is List) list = v;
    else if (v is Map && v['items'] is List) list = (v['items'] as List);
    else if (v is Map && v['Items'] is List) list = (v['Items'] as List);
    else { try { var it = (v as dynamic).items; if (it is List) list = it; } catch (_) {} }
    if (list == null || list.isEmpty) return 0;
    var m = list[0];
    for (var n in list) { if ((n as Comparable).compareTo(m) < 0) m = n; }
    return m;
}

num _sum(dynamic v) {
    Iterable<dynamic>? list;
    if (v is Iterable) list = v;
    else if (v is Map && v['items'] is Iterable) list = (v['items'] as Iterable);
    else if (v is Map && v['Items'] is Iterable) list = (v['Items'] as Iterable);
    else { try { var it = (v as dynamic).items; if (it is Iterable) list = it; } catch (_) {} }
    if (list == null) return 0;
    num s = 0;
    for (var n in list) s += (n as num);
    return s;
}

bool _runTest(String name, void Function() f) {
    stdout.write('   test $name ...');
    var start = DateTime.now();
    try {
        f();
        var d = DateTime.now().difference(start);
        stdout.writeln(' ok (${_formatDuration(d)})');
        return true;
    } catch (e) {
        var d = DateTime.now().difference(start);
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        return false;
    }
}
